# optimal-wordle-solver

./: .gitignore  CMakeLists.txt  README.md  cache.sexp  dune-project  solutions.txt  wordle_solver.opam
lib/: dictionary.ml  dictionary.mli  dune  evaluation.ml  evaluation.mli  evaluator.ml  evaluator.mli  information.ml  information.mli  solver.ml  solver.mli  top_n.ml  top_n.mli  word.ml  word.mli
src/: answer_list.cpp  answer_list.h  constants.h  evaluator.cpp  evaluator.h  main.cpp  make_evaluations.cpp  make_evaluations.h  result.cpp  result.h  solver.cpp  solver.h  word.cpp  word.h
